--- a/css/styles.css
+++ b/css/styles.css
@@ -77,6 +77,7 @@ body{
 .header-cntainer{
    display: flex;
    align-items: center;
+   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08); ;
 }
 
 .header-logo {
@@ -118,9 +119,15 @@ body{
    padding: 24px 0;
    display: block;
 }
-
+.studio{
+   position: relative;
+   color: #404bbf; 
+}
 .studio::after{
    content: '';
+   position: absolute;
+   left: 0;
+   bottom: -1px;
    width: 48px;
    height: 4px;
    background-color:  #404BBF;
