--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,7 @@ body{
 /*--------------HEADER-------------------*/
 .webstudio-header{
    border-bottom: 1px solid #e7e9fc;
+   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .header-navigation {
    display: flex;
@@ -77,7 +78,7 @@ body{
 .header-cntainer{
    display: flex;
    align-items: center;
-   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08); ;
+   
 }
 
 .header-logo {
