--- a/css/styles.css
+++ b/css/styles.css
@@ -193,6 +193,7 @@ address{
    background-repeat: no-repeat;
    padding: 188px 0;
    max-width: 1440px;
+   margin: 0 auto;
 }
 .hero-contanier{
    
@@ -321,7 +322,7 @@ margin-bottom: 72px;
 
 }
 .team-list-text{
-   padding: 32px 16px;
+   padding: 32px 0;
 }
 .team-subtittle {
    font-weight: 500;
@@ -357,7 +358,7 @@ margin-bottom: 8px;
 }
 
 .social-list{
-
+   justify-content: center;
 }
 
 
