--- a/css/styles.css
+++ b/css/styles.css
@@ -353,14 +353,24 @@ margin-bottom: 8px;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);   
 }
 
-.team-social:hover{
+.social-link:hover,
+.social-link:focus{
    background-color: #404BBF;
 }
 
 .social-list{
    justify-content: center;
 }
-
+.social-link{
+   width: 100%;
+   height: 100%;
+   border-color: var(--color-logo);
+   border-radius: 50%;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);   
+}
 
 /*-----------------CLIENTS------------------*/
 .clients {
