--- a/css/styles.css
+++ b/css/styles.css
@@ -371,7 +371,9 @@ margin-bottom: 8px;
    justify-content: center;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);   
 }
-
+.team-social-icon{
+   fill: #f4f4fd;
+}
 /*-----------------CLIENTS------------------*/
 .clients {
   
