--- a/css/styles.css
+++ b/css/styles.css
@@ -345,12 +345,9 @@ margin-bottom: 8px;
 .team-social{
    width: 40px;
    height: 40px;
-   border-radius: 50%;
-   background-color: #4D5AE5;
    display: flex;
-   align-items: center;
    justify-content: center;
-   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);   
+      
 }
 
 .social-link:hover,
@@ -361,7 +358,7 @@ margin-bottom: 8px;
 .social-list{
    justify-content: center;
 }
-.social-link{
+.team-social-link{
    width: 100%;
    height: 100%;
    border-color: var(--color-logo);
@@ -369,6 +366,7 @@ margin-bottom: 8px;
    display: flex;
    align-items: center;
    justify-content: center;
+   display: block;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);   
 }
 .team-social-icon{
