--- a/css/styles.css
+++ b/css/styles.css
@@ -367,6 +367,7 @@ margin-bottom: 8px;
    align-items: center;
    justify-content: center;
    display: block;
+   align-items: center;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);   
 }
 .team-social-icon{
