--- a/css/styles.css
+++ b/css/styles.css
@@ -350,8 +350,8 @@ margin-bottom: 8px;
       
 }
 
-.social-link:hover,
-.social-link:focus{
+.team-social-link:hover,
+.team-social-link:focus{
    background-color: #404BBF;
 }
 
