--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
    --footer-text: #F4F4FD;
    --portfolio-btn: #F4F4FD;
    --text-color: #434455;
+   --fill: #f4f4fd;
 }
 /*-----------------------------------------*/
 *{
@@ -371,7 +372,7 @@ margin-bottom: 8px;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);   
 }
 .team-social-icon{
-   fill: #f4f4fd;
+   fill: var(--fill);
 }
 /*-----------------CLIENTS------------------*/
 .clients {
