--- a/css/styles.css
+++ b/css/styles.css
@@ -362,7 +362,7 @@ margin-bottom: 8px;
 .team-social-link{
    width: 100%;
    height: 100%;
-   border-color: var(--color-logo);
+   background-color: var(--color-logo);
    border-radius: 50%;
    display: flex;
    align-items: center;
