--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
    --portfolio-btn: #F4F4FD;
    --text-color: #434455;
    --fill: #f4f4fd;
+   --client-link: #8e8f99; 
 }
 /*-----------------------------------------*/
 *{
@@ -375,15 +376,38 @@ margin-bottom: 8px;
 }
 /*-----------------CLIENTS------------------*/
 .clients {
-  
+   padding-top: 120px;
+   padding-bottom: 120px;
 }
 
 .clients-tittle{
    text-align: center;
    font-size: 36px;
-   line-height: 1.1;
+   line-height: 1.11;
    color:  var(--subtittle-color);
    margin-bottom: 72px;/* 40/36 */
+}
+
+.clients-list-items{
+   width: width: calc((100% - 120px) / 6);
+}
+
+.client-link{
+   width: 100%;
+   height: 100%;
+   border: 1px solid #8e8f99;
+   border-radius: 4px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   color: var(--client-link);
+   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);   
+}
+
+.client-link:hover,
+.client-link:focus{
+   border-color: #404bbf; 
+   color: #404bbf; 
 }
 
 .clients-list {
@@ -396,7 +420,6 @@ margin-bottom: 8px;
    display: flex;
    align-items: center;
    justify-content: center;
-   width: 168px;
    height: 88px;
 }
 .clients-social-icon{
