--- a/css/styles.css
+++ b/css/styles.css
@@ -409,6 +409,7 @@ height: 88px;
 .client-link:focus{
    border-color: #404bbf; 
    color: #404bbf; 
+   fill: #404BBF;
 }
 
 .clients-list {
@@ -423,7 +424,7 @@ height: 88px;
    height: 88px;
 }
 .clients-social-icon{
-   fill: #8E8F99;
+   fill: #f4f4fd;
    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
