--- a/css/styles.css
+++ b/css/styles.css
@@ -424,7 +424,7 @@ height: 88px;
    height: 88px;
 }
 .clients-social-icon{
-   fill: #f4f4fd;
+   fill: var(--fill);
    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
