--- a/css/styles.css
+++ b/css/styles.css
@@ -412,6 +412,7 @@ height: 88px;
    fill: #404BBF;
 }
 
+
 .clients-list {
  gap: 24px;
 }
@@ -460,10 +461,23 @@ height: 88px;
    line-height: 1.5;
    letter-spacing: 0.02em;
    color: var(--footer-text);
-   margin-bottom: 16px;
+} 
+
+
+.footer-social-link{
+   display: flex;
+   width: 100%;
+   height: 100%;
+   background-color: var(--color-logo);
+   border-radius: 50%;
+   justify-content: center;
+   align-items: center;
+   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);  
 }
-.footer a{
-   display: inline-block;
+
+.footer-social-link:hover,
+.footer-social-link:focus{
+   background-color: #31d0aa; 
 }
 
 .footer-list{
@@ -474,15 +488,15 @@ height: 88px;
 }
 
 .footer-text-social{
+   font-weight: 500;
+   font-size: 16px;  
    line-height: 1.5;
    letter-spacing: 0.02em;
    color: var(--footer-text);
    margin-bottom: 16px;
 }
 
-.footer .team-social:hover{
-   background-color: #31D0AA;;
-}
+
 /*------------------PORTFOLIO-----------------*/
 /*------------------CATEGORIES-----------------*/
 .categories{
