--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
    --list-color: #2e2f42;
    --sub-background: #2e2f42;
    --subtittle-color: #2e2f42;
-   --footer-text: #F4F4FD;
+   --footer-text: #FFFFFF;
    --portfolio-btn: #F4F4FD;
    --text-color: #434455;
    --fill: #f4f4fd;
