--- a/css/styles.css
+++ b/css/styles.css
@@ -549,6 +549,7 @@ height: 88px;
 
 .categories-link{
    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+   display: block; 
 }
 
 .categories-link:hover,
