--- a/css/styles.css
+++ b/css/styles.css
@@ -530,7 +530,7 @@ height: 88px;
    transform: translateY(0);
 }*/
 
-.categories-hidden-block{
+/*.categories-hidden-block{
    background-color: #4D5AE5;
    position: absolute;
    top: 0;
@@ -545,7 +545,7 @@ height: 88px;
    color: var(--footer-text); 
    padding: 40px 32px 0 32px;
    
-}
+}*/
 
 .categories-link{
    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); 
@@ -555,7 +555,7 @@ height: 88px;
 .categories-link:hover,
 .categories-link:focus{
    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-   transform: translateY(0);
+   transform: translateY(0%);
 
 }
 
@@ -632,6 +632,34 @@ font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: var(--text-color);
+}
+
+
+
+.categories-block-item{
+   position: relative;
+   overflow: hidden;
+}
+
+.categories-hidden{
+   position: absolute;
+   top: 0;
+   font-size: 16px;
+   line-height: 1.5;
+   letter-spacing: 0.02em;
+   color: var(--footer-text); 
+   padding: 40px 32px;
+   background-color: #4d5ae5; 
+   height: 100%;
+   width: 100%;
+   transform: translateY(100%); 
+   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.categories-link:hover .categories-hidden,
+.categories-link:focus .categories-hidden{
+   transform: translateY(0);
 }
 
 /*----------------BACKDROP---------------*/
