--- a/css/styles.css
+++ b/css/styles.css
@@ -600,7 +600,7 @@ background-color: var(--portfolio-btn);
 padding: 12px 24px;
 border: 1px solid #e7e9fc;
 border-radius: 4px;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .cat-btn:hover,
 .cat-btn:focus{
