--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
    --text-color: #434455;
    --fill: #f4f4fd;
    --client-link: #8e8f99; 
+   --hidden-color: #f4f4fd; 
 }
 /*-----------------------------------------*/
 *{
@@ -463,6 +464,7 @@ height: 88px;
    height: 100%;
    background-color: var(--color-logo);
    border-radius: 50%;
+   color: var(--hidden-color);
    justify-content: center;
    align-items: center;
    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);  
