--- a/css/styles.css
+++ b/css/styles.css
@@ -161,6 +161,10 @@ body{
    color: var(--list-color);
    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.studio-link{
+   color: #404bbf;
+}
 .list-item a:hover,
 .list-item a:focus{
    color: #404bbf;
