--- a/css/styles.css
+++ b/css/styles.css
@@ -162,7 +162,7 @@ body{
    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.studio-link{
+.studio{
    color: #404bbf;
 }
 .list-item a:hover,
