--- a/css/styles.css
+++ b/css/styles.css
@@ -658,7 +658,7 @@ color: var(--text-color);
    font-size: 16px;
    line-height: 1.5;
    letter-spacing: 0.02em;
-   color: var(--footer-text); 
+   color: var(--hidden-color); 
    padding: 40px 32px;
    background-color: #4d5ae5; 
    height: 100%;
